----------

* lxml.etree did not check tag/attribute names

* The XML parser did not report undefined entities as error

* The text in exceptions raised by XML parsers, validators and XPath
  evaluators now reports the first error that occurred instead of the last

* Passing '' as XPath namespace prefix did not raise an error

* Thread safety in XPath evaluators

Other changes
-------------

* In the public C-API, ``findOrBuildNodeNs()`` was replaced by the more
  generic ``findOrBuildNodeNsPrefix``

* Major refactoring in XPath/XSLT extension function code

* Network access in parsers disabled by default


1.3.3 (2007-07-26)
==================

Features added
--------------

* ElementTree compatible parser ``ETCompatXMLParser`` strips processing
  instructions and comments while parsing XML

* Parsers now support stripping PIs (keyword argument 'remove_pis')

* ``etree.fromstring()`` now supports parsing both HTML and XML, depending on
  the parser you pass.

* Support ``base_url`` keyword argument in ``HTML()`` and ``XML()``

Bugs fixed
----------

* Parsing from Python Unicode strings failed on some platforms

* ``Element()`` did not raise an exception on tag names containing ':'

* ``Element.getiterator(tag)`` did not accept ``Comment`` and
  ``ProcessingInstruction`` as tags. It also accepts ``Element`` now.


1.3.2 (2007-07-03)
==================

Features added
--------------

Bugs fixed
----------

* "deallocating None" crash bug


1.3.1 (2007-07-02)
==================

Features added
--------------

* objectify.DataElement now supports setting values from existing data
  elements (not just plain Python types) and reuses defined namespaces etc.

* E-factory support for lxml.objectify (``objectify.E``)

Bugs fixed
----------

* Better way to prevent crashes in Element proxy cleanup code

* objectify.DataElement didn't set up None value correctly

* objectify.DataElement didn't check the value against the provided type hints
